    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
21-Aug-2003 1.5.4
Acknowledgements:
    Thanks to David D. Kilzer for:
         creating thorough tests for URLs containing navigation and showing a way to handle them, and
         submitting the WebLink.MATCH_TEXT predicate.
    Thanks to Lloyd McKenzie for finding a problem with listing cookie names and suggesting a fix.
    Thanks to Brian O'Kelley for supplying a way to disable use of the proxy server.

Additions:
    Content and Parsing
        1. WebResponse and TableCell now support getElementsWithName and getElementNames to look up HTML elements.
        2. Form.getOptions() now works for radio buttons and checkboxes - as long as the desired name is located after the control.
        3. rfe #723895: A new class CookieProperties now supports relaxing cookie matching rules for path, domain, or both.
        4. It is now possible to define a CookieListener on CookieProperties to watch for cookie rejection events
        5. rfe #751505: Add clearProxyServer() to disable the use of the proxy server
        6. rfe #744360: Added getFirstMatchingForm and getMatchingForms() methods to WebResponse and HTMLSegment
        7. rfe #756453: Made Button.isDisabled() method public
        8: rfe #717752: Added WebLink.MATCH_TEXT predicate to match link text exactly
        9. rfe #721424: You can now set checkbox values in a form via: setCheckbox(name,boolean) or toggleCheckbox(name).
                        These methods will throw an exception if the specified parameter is not a checkbox or if more than
                        one control  has the name.
    ServletUnit